syntax = "proto3";

package todoPackage;

service Todo{
    rpc createTodo(TodoItem) returns (TodoItem);
    rpc readTodos(void) returns (TodoItems);
}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message void{}
message TodoItems {
    repeated TodoItem items = 1 ;
}